# TG-FileStreamBot

./: requirements.txt
.github/workflows/: docker-image.yml
WebStreamer/: __main__.py  vars.py
WebStreamer/bot/plugins/: stream.py
WebStreamer/server/: stream_routes.py
WebStreamer/utils/: __init__.py  cloudreve.py  custom_dl.py  debug_remote_list.py  keepalive.py
tg-filestreambot/: Cargo.toml  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  nginx.conf
tg-filestreambot/.github/workflows/: ci.yml
tg-filestreambot/src/: bot.rs  cloudreve.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs  stream.rs  utils.rs
