[package]
name = "tg_filestreambot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
thiserror = "1.0"
config = "0.14"
once_cell = "1.20"
anyhow = "1.0"
sha2 = "0.10"
dashmap = "5.5"
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"
dotenvy = "0.15"
rustls = "0.23"
tokio-rustls = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true